@@ -1,4 +1,4 @@
-.TH "ecasound-iam" "1" "01\&.05\&.2004" "" "Multimedia software" 
+.TH "ecasound-iam" "1" "19\&.08\&.2004" "" "Multimedia software" 
 .PP 
 .SH "NAME" 
 ecasound-iam \- ecasound interactive mode
@@ -366,7 +366,10 @@ is 1\&.
 Adds a new chain operator\&. Argument format is
 "-<id_string>:par1,\&.\&.\&.,parN"\&. In addition to normal chain operators, 
 this commmand can also be used to add effect presets and various 
-plugins\&. See ecasound(1) man page for more info\&. \fI[-]\fP
+plugins\&. Note; it is not possible to add operators to multiple
+chains at once\&. In other words only one chain should be selected
+when issuing \'cop-add\'\&. See ecasound(1) man page for more 
+info\&. \fI[-]\fP
 .PP 
 .IP "cop-remove" 
 Removes the selected chain operator\&. \fI[-]\fP
