@@ -152,7 +152,9 @@ material that you'd like to see on this page, mail me (Kai Vehmanen) about it.</
 <li> 2003: 
      <a href="http://eca.cx/ecasound-list/2003/08/0072.html">SuperEcasound</a> 
      - On the future development of Ecasound (Kai Vehmanen)</li>
-
+<li> 2004:
+     <a href="http://eca.cx/ecasound-list/2004/08/0017.html">Ecasound and the Average Musician</a>
+	 - Why would the average musician use Ecasound?</li>
 </ul>
 
 
